<resources>
    <string name="app_name" translatable="false">Moscow Times</string>
    <string name="my_name" translatable="false">Dmitry Mersiyanov</string>
    <string name="job_title">Android-developer in Finch</string>
    <string name="billionaire_title">Billionaire</string>
    <string name="philanthropist_title">Philanthropist</string>
    <string name="my_story">Interesting story about myself :)</string>
    <string name="hint_enter_message">Enter message</string>
    <string name="btn_send_message">Send e-mail</string>
    <string name="btn_telegram_msg">PM in Telegram</string>
    <string name="error_no_email_app">Application for sending e-mail is not detected</string>
    <string name="error_message_send">Failed to send message</string>
    <string name="title_about">About</string>
    <string name="test_text" translatable="false">A Danish tourist has admitted he took his life in his hands by sitting on a large crocodile in Australia.  + Niels Jensen, 22, was on safari in a wildlife park east of Darwin in northern Australia when he encountered the predator, estimated to be 4.7m (15ft) long and weighing 653kg (1428 lbs).   The wildlife management graduate is filmed enticing the large reptile, which had been relocated to the park after it was caught preying on livestock, with a wallaby carcass. After leaving the bait on the ground and waiting for the crocodile to start eating, he astonishingly straddled the reptile\'s back, sitting just behind its rear legs.   He touched some of the scales on the animal\'s back, and, after a few moments, rose and walked away.   But a man out of shot told him to get back and give a thumbs-up, so he approached the animal for a second time, sat down again, turned towards the camera, smiled and put this thumb in the air.   Mr Jensen admitted he took life in his hands by sitting on a live crocodile for the first time.</string>
    <string name="error_loading">Error while loading</string>
    <string name="retry">Retry</string>
    <string name="error_view_text">Error has occurred. \nTry again.</string>
    <string name="text_yesterday" translatable="false"> Yesterday, %s </string>
    <string name="text_hours" translatable="false"> %d hr. ago, %s </string>
    <string name="onboarding_title_page_1">Get latest news from all over the world</string>
    <string name="onboarding_title_page_2">Stay on top of all the important events</string>
    <string name="text_skip">Skip</string>
    <string name="choose_news_item">Choose peace of news</string>


</resources>
