<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:scaleType="centerCrop"
            android:src="@drawable/my_picture" />

        <com.dmity.androidacademy.Views.ImageTextView
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            custom:text="@string/job_title"
            custom:image="@drawable/finch_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.dmity.androidacademy.Views.ImageTextView
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            custom:text="@string/biliionare_title"
            custom:image="@drawable/iron_man_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.dmity.androidacademy.Views.ImageTextView
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            custom:text="@string/philanthropist_title"
            custom:image="@drawable/avengers_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <include layout="@layout/view_separator" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/my_story" />

        <include layout="@layout/view_separator" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:hint="@string/hint_enter_message"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="12sp"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_telegram"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_telegram"
                android:paddingLeft="@dimen/small_margin"
                android:paddingRight="@dimen/small_margin"
                android:text="@string/btn_telegram_msg"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="13sp" />


            <Button
                android:id="@+id/btn_send"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:paddingStart="@dimen/small_margin"
                android:paddingEnd="@dimen/small_margin"
                android:text="@string/btn_send_message"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="13sp" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>